<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FuLiCenter</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>
    <string name="category_text">类别</string>
    <string name="new_good_text">新品</string>
    <string name="cart_text">购物车</string>
    <string name="personal_center_text">我</string>
    <string name="boutique_text">精品</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updatanicks">修改昵称成功</string>
    <string name="updatanickf">修改昵称失败</string>
</resources>