<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.MainActivity"
    android:background="@color/list_background">
    <RelativeLayout

        android:id="@+id/rlayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_boutique"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_menu_item_boutique"
            android:text="@string/boutique_text"
            android:textColor="@color/main_botton_text_color"
            android:gravity="center"
            android:textSize="20sp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/rb_new_good"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_menu_item_new_good"
            android:text="@string/new_good_text"
            android:textColor="@color/main_botton_text_color"
            android:gravity="center"
            android:textSize="20sp"
            android:button="@null"/>
        <RadioButton
            android:id="@+id/rb_category"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_menu_item_category"
            android:text="@string/category_text"
            android:textColor="@color/main_botton_text_color"
            android:gravity="center"
            android:textSize="20sp"
            android:button="@null"/>



        <RadioButton
            android:id="@+id/rb_personal_center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_menu_item_personal_center"
            android:text="@string/personal_center_text"
            android:textColor="@color/main_botton_text_color"
            android:gravity="center"
            android:textSize="20sp"
            android:button="@null"/>
        <RadioButton
            android:layout_weight="1"
            android:id="@+id/rb_cart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/selector_menu_item_cart"
            android:text="@string/cart_text"
            android:textColor="@color/main_botton_text_color"
            android:gravity="center"
            android:textSize="20sp"
            android:button="@null"/>

    </RadioGroup>
    <TextView
        android:id="@+id/tv_cart_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cart_hint"
        android:textColor="@color/black"
        android:layout_alignTop="@id/rg_menu"
        android:layout_alignRight="@id/rg_menu"
        android:text="10"
        />
    </RelativeLayout>


    <View
        android:id="@+id/id_xian"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/rlayout"
        android:background="#2f2f29"
        android:layout_marginBottom="5dp"/>

<RelativeLayout
    android:id="@+id/fragment_stay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/id_xian">

</RelativeLayout>
</RelativeLayout>
